--- a/assets/styles/sass/universal/_animations.scss
+++ b/assets/styles/sass/universal/_animations.scss
@@ -67,17 +67,17 @@
     0% {
         opacity: 0;
 
-        -webkit-transform: translate(-50%, -60%);
-        -ms-transform: translate(-50%, -60%);
-        transform: translate(-50%, -60%);
+        -webkit-transform: translateY(-60%);
+        -ms-transform: translateY(-60%);
+        transform: translateY(-60%);
     }
 
     100% {
         opacity: 1;
 
-        -webkit-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
     }
 }
 
