--- a/assets/styles/site.css
+++ b/assets/styles/site.css
@@ -92,14 +92,14 @@ video::-webkit-media-controls-start-playback-button {
 @keyframes fade-in-down {
   0% {
     opacity: 0;
-    -webkit-transform: translate(-50%, -60%);
-    -ms-transform: translate(-50%, -60%);
-    transform: translate(-50%, -60%); }
+    -webkit-transform: translateY(-60%);
+    -ms-transform: translateY(-60%);
+    transform: translateY(-60%); }
   100% {
     opacity: 1;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%); } }
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); } }
 /* Fade In Out
 ---------------------------------------------------------------------------------------------------- */
 @keyframes fade-in-out {
@@ -128,13 +128,13 @@ h1 {
 a {
   color: rgba(255, 255, 255, 0.85); }
 
-@media (max-width: 580px) {
-  body {
-    font-size: 14px; }
-
+@media (max-width: 768px) {
   h1 {
     font-size: 38px;
     line-height: 1.45; } }
+@media (max-width: 580px) {
+  body {
+    font-size: 14px; } }
 /* Labels
 ---------------------------------------------------------------------------------------------------- */
 .label {
@@ -279,20 +279,24 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
   padding: 25px 50px;
   text-align: center;
-  position: absolute;
+  margin: 0 auto;
+  position: relative;
   top: 50%;
-  left: 50%;
   z-index: 20;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%); }
+  max-width: 660px;
+  width: 100%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%); }
   #about h1 {
     margin-bottom: 10px;
     text-transform: uppercase; }
   #about p {
     margin: 0 0 5px; }
-  @media (max-width: 580px) {
+  @media (max-width: 768px) {
     #about {
+      border-radius: 0;
+      max-width: none;
       padding-left: 25px;
       padding-right: 25px; } }
 
